Refatored the UserService methods and implemented HATEOAS